# tni-tech-test

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  package-lock.json  package.json
app/app/: page.tsx
app/app/components/: Navbar.tsx  ResultsTable.tsx
app/app/results/: page.tsx
assets/: architecture.drawio
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/assets/sql/: create_table.sql
backend/src/: app.py
backend/src/common/: logging.py
backend/src/configs/: config.py
backend/src/database/: result_db.py
backend/src/models/: model.py
backend/src/schemas/: data.py  model.py
backend/src/services/: core_service.py  data_service.py
